2004-10-16  Malcolm Purvis  <malcolmp@xemacs.org>

	* gtk-xemacs.c (gtk_xemacs_size_allocate): Cast pointer to right type.

2004-10-14  Jerry James  <james@xemacs.org>

	* compiler.h: New USED_IF_MULE and USED_IF_MULE_OR_CHECK_TEXT macros.
	* glyphs-msw.c (charset_of_text): Use USED_IF_MULE.
	* intl-x.c (init_x_locale): Ditto.
	* intl-win32.c: Remove USED_IF_MULE definition.
	* regex.h: Mark RE_LISP_SHORT_CONTEXT_ARGS_DECL arguments unused.
	New RE_LISP_CONTEXT_ARGS_MULE_DECL macro for one unused case.

	* buffer.h:
	* device-x.c:
	* elhash.c:
	* objects.c:
	* regex.c:
	* search.c:
	* text.c:
	* text.h:
	* unicode.c:
	Mark more unused parameters.

2004-09-27  Jerry James  <james@xemacs.org>

	* gmalloc.c (malloc): Change log to log2 to quiet gcc 3.3.

2004-09-27  Jerry James  <james@xemacs.org>

	* sysdep.c: Mark more unused parameters with the UNUSED macro.

2004-09-21  Jerry James  <james@xemacs.org>

	* ExternalClient.c: Include compiler.h.
	* ExternalShell.c: Ditto.

2004-09-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* file-coding.c: Improve explanatory comments, add diatribes.
	Fix some typos in comments.

2003-11-21  Stephen J. Turnbull  <stephen@xemacs.org>
 
	* dired.c (Fdirectory_files): MATCH is only tried against basename.

2003-11-02  Stephen J. Turnbull  <stephen@xemacs.org>

	* eval.c (Fcatch, Fthrow): Document that tags are compared with `eq'.

2003-10-31  Stephen J. Turnbull  <stephen@xemacs.org>

	* procimpl.h (struct Lisp_Process):
	* undo.c (Fprimitive_undo): 
	Remove obsolete references to ENERGIZE in comments.

2004-07-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* glyphs.c (Fimage_instance_type): Add 'widget to docstring.

2004-07-12  Stephen J. Turnbull  <stephen@xemacs.org>

	* glyphs-widget.c (tab_control_query_geometry):
	(logical_unit_height):
	Typos in comments.

2004-06-29  Stephen J. Turnbull  <stephen@xemacs.org>

	* syntax.c (Sextword): Doesn't seem to exist.  Move comment to
	Internals manual.
